# orienta

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  errors.py  main.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
.github/workflows/: build.yaml  linting.yaml  testing.yaml
api/v1/: guides.py  sessions.py  status.py  topics.py  user.py  users.py  validate.py  validations.py
client/: .prettierignore  next.config.mjs  package-lock.json  package.json  tailwind.config.js
client/src/app/: globals.css  layout.js  page.js
client/src/components/: auth-guard.jsx  card-skeleton.jsx  completed-card.jsx  header.jsx  (+12 more)
dtos/: guide_request.py  guide_response.py  topic.py
infra/: errors.py  response_schema.py
models/: auth.py  guide.py  ia.py  prompt.py  session.py  status.py  user.py
prompts/: generate_guide.md
src/: actions.py  errors.py  main.py  schemas.py  utils.py
src/api/: guide.py  sessions.py  user.py
src/models/: auth.py  firebase.py  guide.py  prompt.py  session.py  status.py  user.py
src/prompts/: topic_validation.md
src/templates/: error.html  generate.html  guide.html  index.html  login.html  my-guides.html  plan.html  register.html  status.html  template.html
tests/: conftest.py  orchestrator.py
tests/integration/: test_index_route.py  test_login_route.py  test_logout_route.py  test_plan_route.py  test_register_route.py  test_status.py
tests/unit/: test_auth_model.py  test_guide_dto.py  test_guide_model.py  test_prompt_model.py  test_session_model.py  test_topic_dto.py  test_user_model.py
(+78 files in other folders)
